--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -16655,7 +16655,7 @@ a:hover, a:focus, a:visited {
   }
 }
 .content-details p {
-  margin-bottom: 20px;
+  margin-bottom: 5rem;
   font-size: 15px;
 }
 .default-btn {
