--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -8256,7 +8256,8 @@ a.jp-mute, a.jp-unmute {
   margin: 0 0 5.2em; }
 
 .page-template-template-homepage-v1 .section-tabs .nav {
-  padding-top: 48px; }
+  padding-top: 48px; 
+  margin-bottom: 3rem;}
 
 .page-template-template-homepage-v2 .section-tabs .nav {
   padding-top: 98px; }
